--- a/sihl.opam
+++ b/sihl.opam
@@ -12,25 +12,19 @@ bug-reports: "https://github.com/oxidizing/sihl/issues"
 depends: [
   "dune" {>= "2.7"}
   "ocaml" {>= "4.08.0"}
-  "lwt" {>= "5.3.0"}
+  "sihl-core" {= version}
   "opium" {>= "0.17.1"}
   "multipart-form-data" {>= "0.3.0"}
   "yojson" {>= "1.7.0"}
   "ppx_deriving_yojson" {>= "3.5.2"}
-  "conformist" {>= "0.1.0"}
-  "tsort" {>= "2.0.0"}
   "tls" {>= "0.11.1"}
   "ssl" {>= "0.5.9"}
   "lwt_ssl" {>= "1.1.3"}
   "caqti" {>= "1.2.1"}
   "caqti-lwt" {>= "1.2.0"}
-  "tyxml" {>= "4.3.0"}
-  "logs" {>= "0.7.0"}
-  "fmt" {>= "0.8.8"}
   "safepass" {>= "3.0"}
   "jwto" {>= "0.3.0"}
   "uuidm" {>= "0.9.7"}
-  "sexplib" {>= "v0.13.0"}
   "ppx_fields_conv" {>= "v0.13.0"}
   "ppx_sexp_conv" {>= "v0.13.0"}
   "alcotest" {>= "1.2.0"}
