--- a/sihl/token/dune
+++ b/sihl/token/dune
@@ -2,7 +2,7 @@
  (name sihl_token)
  (public_name sihl.token)
  (libraries ptime ptime.clock.os yojson ppx_deriving_yojson.runtime alcotest
-   caqti sihl_core sihl_database sihl_migration sihl_utils)
+   sihl_database sihl_migration sihl_utils)
  (modules_without_implementation sig)
  (preprocess
   (pps ppx_deriving_yojson ppx_fields_conv ppx_deriving.eq ppx_deriving.show
