--- a/sihl/utils/dune
+++ b/sihl/utils/dune
@@ -1,8 +1,8 @@
 (library
  (name sihl_utils)
  (public_name sihl.utils)
- (libraries re yojson ppx_deriving_yojson.runtime safepass base64 ptime jwto
-   sihl_core containers)
+ (libraries yojson ppx_deriving_yojson.runtime safepass ptime jwto
+   sihl_core)
  (preprocess
   (pps ppx_deriving_yojson ppx_fields_conv ppx_deriving.eq ppx_deriving.show
     ppx_deriving.make)))
